# smartmontools

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  Makefile.am  README.md  TODO.md  all_endurance_labels.txt  autogen.sh  configure.ac  drivedb.h  missing_labels.txt  regex_covered_labels.txt
include/: Makefile.am
include/smartmon/: ata.h  atacmds.h  byteorder.h  dev_interface.h  farmcmds.h  json.h  knowndrives.h  nvme.h  nvmecmds.h  scsicmds.h  smartmon_defs.h  utility.h
include/smartmon/os_win32/: wmiquery.h
lib/: Makefile.am  atacmdnames.cpp  atacmds.cpp  cciss.cpp  cciss.h  dev_areca.cpp  dev_areca.h  dev_ata_cmd_set.cpp  dev_ata_cmd_set.h  dev_intelliprop.cpp  dev_interface.cpp  dev_jmb39x_raid.cpp  dev_legacy.cpp  dev_ps3stor.cpp  dev_ps3stor.h  dev_tunnelled.h  drivedb.h  farmcmds.cpp  json.cpp  knowndrives.cpp  mpi3mr.h  nvmecmds.cpp  openbsd_nvme_ioctl.h  os_darwin.cpp  os_darwin.h  os_freebsd.cpp  os_generic.cpp  os_generic.h  os_linux.cpp  os_netbsd.cpp  os_openbsd.cpp  os_openbsd.h  os_os2.cpp  os_qnxnto.cpp  os_qnxnto.h  os_solaris.cpp  os_win32.cpp  scsiata.cpp  scsicmds.cpp  scsinvme.cpp  (+2 more)
lib/examples/: Makefile  Makefile.in  ata-standby.cpp  lsdisk.cpp
lib/os_win32/: popen_win32.cpp  wmiquery.cpp
lib/regex/: regex.c
sm5/: .cvsignore  AUTHORS  CHANGELOG  Doxyfile  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  WARNINGS  add  atacmdnames.c  atacmdnames.cpp  atacmdnames.h  atacmds.c  atacmds.cpp  atacmds.h  ataprint.c  ataprint.cpp  ataprint.h  autogen.sh  autotools.diff  bootstrap.sh  cciss.cpp  configure.in  cvs-script  dev_ata_cmd_set.cpp  dev_ata_cmd_set.h  dev_interface.cpp  dev_interface.h  dev_legacy.cpp  dev_tunnelled.h  do_release  escalade.c  escalade.h  extern.h  findbadprint  int64.h  knowndrives.c  (+63 more)
sm5/examplescripts/: Example1  Example2  Example3  Example4  Makefile.am  README
sm5/os_darwin/: SMART.in
sm5/os_os2/: configure.os2
sm5/os_win32/: .cvsignore  config_vc6.h  daemon_win32.c  daemon_win32.cpp  daemon_win32.h  hostname_win32.c  hostname_win32.cpp  hostname_win32.h  installer.nsi  int64_vc6.c  os_win32.c  smartctl_vc6.dsp  smartctl_vc8.vcproj  smartd_vc6.dsp  smartd_vc8.vcproj  smartmontools_vc6.dsw  syslog.h  syslog_win32.c  syslog_win32.cpp  syslogevt.c  syslogevt.mc  syslogevt_vc6.dsp
sm5/posix/: regex.h
smartmontools/: .editorconfig  0001-adding-first-mpi3mr-support.patch  AUTHORS  CHANGELOG  ChangeLog  ChangeLog-5.0-6.0  ChangeLog-6.0-7.0  Doxyfile  INSTALL  Makefile.am  NEWS  README  TODO  WARNINGS  aacraid.h  atacmdnames.cpp  atacmdnames.h  atacmds.cpp  atacmds.h  ataidentify.cpp  ataidentify.h  ataprint.cpp  ataprint.h  autogen.sh  cciss.cpp  cciss.h  configure.ac  configure.in  cppcheck.sh  csmisas.h  dev_areca.cpp  dev_areca.h  dev_ata_cmd_set.cpp  dev_ata_cmd_set.h  dev_intelliprop.cpp  dev_intelliprop.h  dev_interface.cpp  dev_interface.h  dev_jmb39x_raid.cpp  dev_legacy.cpp  (+72 more)
smartmontools/examplescripts/: Example1  Example2  Example3  Example6  Example7  Example8  Makefile.am  README
smartmontools/getopt/: getopt.c  getopt.h  getopt1.c
smartmontools/os_darwin/: English_Localizable.strings  SMART.in  StartupParameters.plist  com.smartmontools.smartd.plist.in
smartmontools/os_darwin/pkg/: Distribution.in  PackageInfo.in  do_package.sh
smartmontools/os_os2/: hdreg.h
smartmontools/os_win32/: daemon_win32.cpp  daemon_win32.h  default.manifest  hostname_win32.cpp  installer.nsi  pe32edit.sh  popen.h  popen_win32.cpp  runcmd.c  runcmd_vc10.vcxproj  runcmda.exe.manifest  runcmdu.exe.manifest  smartctl_res.rc.in  smartctl_vc10.vcxproj  smartctl_vc10.vcxproj.filters  smartctl_vc8.vcproj  smartd_mailer.conf.sample.ps1  smartd_mailer.ps1  smartd_res.rc.in  smartd_vc10.vcxproj  smartd_vc10.vcxproj.filters  smartd_vc8.vcproj  smartd_warning.cmd  smartmontools_vc10.sln  smartmontools_vc8.sln  syslog.h  syslog_win32.cpp  syslogevt.c  syslogevt.mc  syslogevt_vc10.vcxproj  syslogevt_vc8.vcproj  update-smart-drivedb.nsi  update-smart-drivedb.ps1.in  versioninfo.rc.in  wbemcli_small.h  wmiquery.cpp  wmiquery.h  wtssendmsg.c  wtssendmsg.cpp  wtssendmsg.h
smartmontools/os_win32/vc10/: runcmd.vcxproj  smartctl.vcxproj  smartctl.vcxproj.filters  smartd.vcxproj  smartd.vcxproj.filters  smartmontools.sln  syslogevt.vcxproj  wtssendmsg.vcxproj
smartmontools/os_win32/vc14/: runcmd.vcxproj  smartctl.vcxproj  smartctl.vcxproj.filters  smartd.vcxproj  smartmontools.sln  (+2 more)
smartmontools/posix/: regex.h
smartmontools/regex/: regcomp.c  regex.c  regex.h  regex_internal.c  regex_internal.h  regexec.c
src/: .editorconfig  AUTHORS  Makefile.am  README  atacmds.cpp  atacmds.h  ataidentify.cpp  ataidentify.h  ataprint.cpp  ataprint.h  clang-scan-build.sh  cppcheck.sh  dev_areca.h  dev_ps3stor.cpp  do_release  drivedb.h  farmcmds.cpp  farmprint.cpp  farmprint.h  getversion.sh  knowndrives.cpp  knowndrives.h  nvmecmds.cpp  nvmeprint.cpp  nvmeprint.h  os_freebsd.cpp  os_freebsd.h  os_linux.cpp  os_openbsd.cpp  os_solaris.cpp  os_win32.cpp  scsinvme.cpp  scsiprint.cpp  scsiprint.h  smartctl.8.in  smartctl.cpp  smartctl.h  smartd.8.in  smartd.conf.5.in  smartd.cpp  (+7 more)
src/examplescripts/: Example2  Example3  Example4
src/getopt/: getopt.c  getopt1.c
src/os_win32/: installer.nsi  pe32edit.sh  popen.h  smartd_mailer.conf.sample.ps1  syslog.h  syslog_win32.cpp  update-smart-drivedb.ps1.in  versioninfo.rc.in
src/regex/: regexec.c
src/snmp-agentxd/: Makefile  Makefile.am  Makefile.in  README.md  agentxd_cache.cpp  agentxd_cache.h  agentxd_config.cpp  agentxd_config.h  agentxd_datasrc.cpp  agentxd_datasrc.h  agentxd_json.cpp  agentxd_json.h  agentxd_loop.cpp  agentxd_loop.h  agentxd_main.cpp  agentxd_notify.cpp  agentxd_notify.h  smartmon-collect  smartmon-collect.service  smartmon-collect.timer  smartmon-snmp-agentxd  smartmon-snmp-agentxd.8.in  smartmon-snmp-agentxd.conf  smartmon-snmp-agentxd.service.in  snmp_common_mib.cpp  snmp_common_mib.h  snmp_mib_helpers.h  snmp_nvme_mib.cpp  snmp_nvme_mib.h  snmp_oids.h  snmp_sas_mib.cpp  snmp_sas_mib.h  snmp_sata_mib.cpp  snmp_sata_mib.h  snmp_sensor_mib.cpp  snmp_sensor_mib.h
(+189 files in other folders)
